# x0-matching-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_EN.md
crates/me-core/: Cargo.toml
crates/me-core/src/: engine.rs  lib.rs  metrics.rs  pipeline.rs
crates/me-core/tests/: conservation.rs  derivatives.proptest-regressions  derivatives.rs  pipeline.rs  recovery.rs
crates/me-disruptor/: Cargo.toml
crates/me-disruptor/src/: lib.rs  ring.rs  sequence.rs  wait.rs
crates/me-matching/: Cargo.toml
crates/me-matching/src/: book.rs  lib.rs
crates/me-risk/: Cargo.toml
crates/me-risk/src/: account.rs  engine.rs  lib.rs
crates/me-server/: Cargo.toml
crates/me-server/src/: main.rs
crates/me-types/: Cargo.toml
crates/me-types/src/: command.rs  enums.rs  event.rs  ids.rs  invariants.rs  lib.rs  numeric.rs  receipt.rs  reject.rs  symbol.rs
crates/me-wal/: Cargo.toml
crates/me-wal/src/: journal.rs  lib.rs  snapshot.rs
