[workspace]
resolver = "2"
members = [
    "crates/me-types",
    "crates/me-disruptor",
    "crates/me-wal",
    "crates/me-risk",
    "crates/me-matching",
    "crates/me-core",
    "crates/me-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["matching-engine contributors"]
repository = ""

[workspace.dependencies]
me-types = { path = "crates/me-types" }
me-disruptor = { path = "crates/me-disruptor" }
me-wal = { path = "crates/me-wal" }
me-risk = { path = "crates/me-risk" }
me-matching = { path = "crates/me-matching" }
me-core = { path = "crates/me-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
anyhow = "1.0"
ahash = { version = "0.8", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
slab = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

proptest = "1.5"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 1

[profile.dev]
opt-level = 1
