[package]
name = "me-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Top-level facade that assembles the pipeline"

[dependencies]
me-types = { workspace = true }
me-disruptor = { workspace = true }
me-wal = { workspace = true }
me-risk = { workspace = true }
me-matching = { workspace = true }
ahash = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
