[package]
name = "me-wal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Write-ahead log + snapshot store (filled in M3)"

[dependencies]
me-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
